--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset='UTF-8'/>
-    <link rel='icon' href='favicon.png'/>
+    <link rel='icon' href='favicon.ico'/>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
     <title>智慧幕墙 - 数据集管理平台</title>
     <script src='js/icon.js'></script>
